[package]
name = "btc-hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.27", features = ["rand-std"] }
ripemd = "0.1"
sha2 = "0.10"
base58 = "0.2"
bech32 = "0.9"
rand = "0.8"
rayon = "1.8"
dotenvy = "0.15"
hex = "0.4"
num-format = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] } # 必须
serde_json = "1.0"